--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tools",
   "version": "1.1.2",
   "description": "tools",
+  "homepage": "https://Wukongyang.github.io/Tools",
   "license": "MIT",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
