--- a/.github/workflows/pulish.yml
+++ b/.github/workflows/pulish.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           node-version: 16
           cache: npm
+          cache-dependency-path: subdir/package-lock.json
       - run: npm install
  
       - name: Build
