--- a/.github/workflows/pulish.yml
+++ b/.github/workflows/pulish.yml
@@ -11,12 +11,12 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ matrix.node-version }}
           cache: npm
-          cache-dependency-path: package-lock.json
       - run: npm install
  
       - name: Build
