--- a/.github/workflows/pulish.yml
+++ b/.github/workflows/pulish.yml
@@ -1,31 +1,34 @@
-name: Deploy
- 
+name: Node.js CI
+
 on:
   push:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-  workflow_dispatch:
- 
+
 jobs:
-  deploy:
+  build:
+
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: npm
-      - run: npm install
- 
-      - name: Build
-        run: npm run docs:build
- 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
-          EXTERNAL_REPOSITORY: Wukongyang.github.io
-          PUBLISH_DIR: docs-dist
-          PUBLISH_BRANCH: master
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+           node-version: 16
+    - name: Install dependencies
+      run: |
+          if [ -e yarn.lock ]; then
+          yarn install --frozen-lockfile
+          elif [ -e package-lock.json ]; then
+          npm ci
+          else
+          npm i
+          fi
+    - run: npm run docs:build
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+          deploy_key: ${{ secrets.yangyuanchao }}
+          publish_dir: docs-dist
+          publish_branch: pages
           commit_message: ${{ github.event.head_commit.message }}
