--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
     "baseUrl": "./",
     "paths": {
       "@@/*": [".dumi/tmp/*"],
-      "tools": ["src"],
-      "tools/*": ["src/*", "*"]
+      "fe-funs": ["src"],
+      "fe-funs/*": ["src/*", "*"]
     }
   },
   "include": [".dumi/**/*", ".dumirc.ts", "src/**/*"]
